--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="week9-11.html">Week 9-11</a></li>
         <li><a href="challenges.html">Challenges</a></li>
     </ul>
-</div>
+
 
 <!-- Week 1-4  -->
 <section id="Week1-4">
@@ -74,6 +74,10 @@
         </div>
     </div>
 </section>
-<div class="verse">“My grace is sufficient for you, for my power is made perfect in weakness.” 2 Corinthians 12:9</div>
+
+<div class="footer">
+    &copy; “My grace is sufficient for you, for my power is made perfect in weakness.” 2 Corinthians 12:9
+  </div>
+
 </body>
 </html>
